--- a/prostore/package.json
+++ b/prostore/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@prisma/client": "^6.6.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -31,6 +32,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "postcss": "^8.4.31",
+    "prisma": "^6.6.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5"
   }
